@@ -72,7 +72,6 @@
 #define SYSTEM_ALWAYS_TRUE          125   // useful for <visible fade="10" start="hidden">true</visible>, to fade in a control
 #define SYSTEM_ALWAYS_FALSE         126   // used for <visible fade="10">false</visible>, to fade out a control (ie not particularly useful!)
 #define SYSTEM_MEDIA_DVD            127
-#define SYSTEM_NO_SUCH_ALARM        128
 #define SYSTEM_HAS_ALARM            129
 #define SYSTEM_AUTODETECTION        130
 #define SYSTEM_FREE_MEMORY          131
